[gd_scene load_steps=18 format=2]

[ext_resource path="res://font/KronaOne-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/Menu.gd" type="Script" id=2]
[ext_resource path="res://assets/btn.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/yy.wav" type="AudioStream" id=4]
[ext_resource path="res://scenes/Fader.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/goodbye.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/klik00.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/tlo.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=9]
size = 57
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 18
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="Theme" id=3]

[sub_resource type="StyleBoxEmpty" id=8]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tlo" type="Sprite" parent="."]
position = Vector2( 625, 356 )
texture = ExtResource( 8 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
margin_right = 1280.0
margin_bottom = 720.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
margin_left = 391.0
margin_top = 38.0
margin_right = 889.0
margin_bottom = 682.0

[node name="CenterContainer6" type="CenterContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_right = 498.0
margin_bottom = 72.0

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/CenterContainer6"]
margin_left = 119.0
margin_right = 379.0
margin_bottom = 72.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 9 )
text = "color"
uppercase = true

[node name="CenterContainer7" type="CenterContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 76.0
margin_right = 498.0
margin_bottom = 148.0

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/CenterContainer7"]
margin_left = 59.0
margin_right = 438.0
margin_bottom = 72.0
custom_colors/font_color = Color( 0.0509804, 0.572549, 0.266667, 1 )
custom_fonts/font = SubResource( 9 )
text = "changes"
uppercase = true

[node name="CenterContainer8" type="CenterContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 152.0
margin_right = 498.0
margin_bottom = 224.0

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/CenterContainer8"]
margin_right = 498.0
margin_bottom = 72.0
custom_colors/font_color = Color( 0.00784314, 0, 1, 1 )
custom_fonts/font = SubResource( 9 )
text = "everything "
uppercase = true

[node name="Title2" type="CenterContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 228.0
margin_right = 498.0
margin_bottom = 251.0

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/Title2"]
margin_left = 14.0
margin_right = 484.0
margin_bottom = 23.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Focus and choose the right color"
uppercase = true

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 255.0
margin_right = 498.0
margin_bottom = 285.0
rect_min_size = Vector2( 0, 30 )

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 289.0
margin_right = 498.0
margin_bottom = 350.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/CenterContainer/VBoxContainer/CenterContainer"]
margin_left = 99.0
margin_right = 399.0
margin_bottom = 61.0

[node name="Selector" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 36.0
margin_bottom = 61.0
rect_min_size = Vector2( 36, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = ">"

[node name="Easy" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 40.0
margin_right = 300.0
margin_bottom = 61.0
rect_min_size = Vector2( 260, 61 )
custom_styles/focus = SubResource( 5 )
flat = true
align = 0

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/CenterContainer/HBoxContainer/Easy"]
margin_left = 16.0
margin_right = 248.0
margin_bottom = 61.0
rect_min_size = Vector2( 232, 0 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Red"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer2" type="CenterContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 354.0
margin_right = 498.0
margin_bottom = 415.0

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/CenterContainer/VBoxContainer/CenterContainer2"]
margin_left = 99.0
margin_right = 399.0
margin_bottom = 61.0

[node name="Selector" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer2"]
margin_right = 36.0
margin_bottom = 61.0
rect_min_size = Vector2( 36, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = ">"

[node name="Normal" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer2"]
margin_left = 40.0
margin_right = 300.0
margin_bottom = 61.0
rect_min_size = Vector2( 260, 61 )
custom_styles/focus = SubResource( 6 )
flat = true
align = 0

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer2/Normal"]
margin_left = 16.0
margin_right = 248.0
margin_bottom = 61.0
rect_min_size = Vector2( 232, 0 )
custom_colors/font_color = Color( 0.0509804, 0.572549, 0.266667, 1 )
custom_fonts/font = SubResource( 2 )
text = "Green"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer3" type="CenterContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 419.0
margin_right = 498.0
margin_bottom = 480.0

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/CenterContainer/VBoxContainer/CenterContainer3"]
margin_left = 99.0
margin_right = 399.0
margin_bottom = 61.0

[node name="Selector" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/CenterContainer3/HBoxContainer3"]
margin_right = 36.0
margin_bottom = 61.0
rect_min_size = Vector2( 36, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = ">"

[node name="Hard" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer/CenterContainer3/HBoxContainer3"]
margin_left = 40.0
margin_right = 300.0
margin_bottom = 61.0
rect_min_size = Vector2( 260, 61 )
custom_styles/focus = SubResource( 7 )
flat = true
align = 0

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/CenterContainer3/HBoxContainer3/Hard"]
margin_left = 16.0
margin_right = 248.0
margin_bottom = 61.0
rect_min_size = Vector2( 232, 0 )
custom_colors/font_color = Color( 0.00784314, 0, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "Blue"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 484.0
margin_right = 498.0
margin_bottom = 514.0
rect_min_size = Vector2( 0, 30 )

[node name="CenterContainer4" type="CenterContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 518.0
margin_right = 498.0
margin_bottom = 579.0

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/CenterContainer/VBoxContainer/CenterContainer4"]
margin_left = 99.0
margin_right = 399.0
margin_bottom = 61.0

[node name="Selector" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/CenterContainer4/HBoxContainer4"]
margin_right = 36.0
margin_bottom = 61.0
rect_min_size = Vector2( 36, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = ">"

[node name="Credits" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer/CenterContainer4/HBoxContainer4"]
margin_left = 40.0
margin_right = 300.0
margin_bottom = 61.0
rect_min_size = Vector2( 260, 61 )
custom_styles/focus = SubResource( 4 )
flat = true
align = 0

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/CenterContainer4/HBoxContainer4/Credits"]
margin_left = 16.0
margin_right = 248.0
margin_bottom = 61.0
rect_min_size = Vector2( 232, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Credits"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer5" type="CenterContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 583.0
margin_right = 498.0
margin_bottom = 644.0

[node name="HBoxContainer5" type="HBoxContainer" parent="MarginContainer/CenterContainer/VBoxContainer/CenterContainer5"]
margin_left = 99.0
margin_right = 399.0
margin_bottom = 61.0

[node name="Selector" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/CenterContainer5/HBoxContainer5"]
margin_right = 36.0
margin_bottom = 61.0
rect_min_size = Vector2( 36, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = ">"

[node name="Exit" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer/CenterContainer5/HBoxContainer5"]
margin_left = 40.0
margin_right = 300.0
margin_bottom = 61.0
rect_min_size = Vector2( 260, 61 )
theme = SubResource( 3 )
custom_styles/focus = SubResource( 8 )
flat = true
align = 0

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/CenterContainer5/HBoxContainer5/Exit"]
margin_left = 16.0
margin_right = 248.0
margin_bottom = 61.0
rect_min_size = Vector2( 232, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Exit"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerBtnChange" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="PlayerBtnYy" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="PlayerBtnGoodBye" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="PlayerBtnClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
pitch_scale = 1.27

[node name="Fader" parent="." instance=ExtResource( 5 )]

[connection signal="mouse_entered" from="MarginContainer/CenterContainer/VBoxContainer/CenterContainer/HBoxContainer" to="." method="_on_HBoxContainer_mouse_entered"]
[connection signal="mouse_entered" from="MarginContainer/CenterContainer/VBoxContainer/CenterContainer/HBoxContainer/Easy" to="." method="_on_Easy_mouse_entered"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/CenterContainer/HBoxContainer/Easy" to="." method="_on_Easy_pressed"]
[connection signal="mouse_entered" from="MarginContainer/CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer2" to="." method="_on_HBoxContainer2_mouse_entered"]
[connection signal="mouse_entered" from="MarginContainer/CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer2/Normal" to="." method="_on_Normal_mouse_entered"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer2/Normal" to="." method="_on_Normal_pressed"]
[connection signal="mouse_entered" from="MarginContainer/CenterContainer/VBoxContainer/CenterContainer3/HBoxContainer3" to="." method="_on_HBoxContainer3_mouse_entered"]
[connection signal="mouse_entered" from="MarginContainer/CenterContainer/VBoxContainer/CenterContainer3/HBoxContainer3/Hard" to="." method="_on_Hard_mouse_entered"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/CenterContainer3/HBoxContainer3/Hard" to="." method="_on_Hard_pressed"]
[connection signal="mouse_entered" from="MarginContainer/CenterContainer/VBoxContainer/CenterContainer4/HBoxContainer4" to="." method="_on_HBoxContainer4_mouse_entered"]
[connection signal="mouse_entered" from="MarginContainer/CenterContainer/VBoxContainer/CenterContainer4/HBoxContainer4/Credits" to="." method="_on_Credits_mouse_entered"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/CenterContainer4/HBoxContainer4/Credits" to="." method="_on_Credits_pressed"]
[connection signal="mouse_entered" from="MarginContainer/CenterContainer/VBoxContainer/CenterContainer5/HBoxContainer5" to="." method="_on_HBoxContainer5_mouse_entered"]
[connection signal="mouse_entered" from="MarginContainer/CenterContainer/VBoxContainer/CenterContainer5/HBoxContainer5/Exit" to="." method="_on_Exit_mouse_entered"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/CenterContainer5/HBoxContainer5/Exit" to="." method="_on_Exit_pressed"]
